[gd_scene load_steps=15 format=2]

[ext_resource path="res://assests/main_background/colorful/tree_colour.png" type="Texture" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/red_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/blue_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/game_scene.gd" type="Script" id=6]
[ext_resource path="res://scenes/green_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=8]
[ext_resource path="res://assests/main_background/black_white/tree_bw.png" type="Texture" id=9]
[ext_resource path="res://assests/main_background/white_mask.webp" type="Texture" id=10]
[ext_resource path="res://audio/game_soundLevel.mp3" type="AudioStream" id=11]
[ext_resource path="res://audio/pressed.wav" type="AudioStream" id=12]
[ext_resource path="res://scenes/win_scene.tscn" type="PackedScene" id=13]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("game/Viewport")

[node name="gameScene" type="Node2D"]
script = ExtResource( 6 )

[node name="game" type="Node2D" parent="."]

[node name="background" type="Sprite" parent="game"]
unique_name_in_owner = true
position = Vector2( 204, 361 )
texture = ExtResource( 1 )

[node name="background2" type="Sprite" parent="game"]
unique_name_in_owner = true
light_mask = 32
position = Vector2( 204, 361 )
texture = ExtResource( 9 )

[node name="Viewport" type="Viewport" parent="game"]
unique_name_in_owner = true
size = Vector2( 1000, 700 )
transparent_bg = true
render_target_v_flip = true

[node name="mask" type="Sprite" parent="game/Viewport"]
texture = ExtResource( 10 )

[node name="backgroundcolor" type="Light2D" parent="game"]
unique_name_in_owner = true
position = Vector2( 230, 721.001 )
scale = Vector2( 1, -0.000914286 )
texture = SubResource( 1 )
offset = Vector2( 0, -348.805 )
mode = 3
range_item_cull_mask = 32

[node name="player" parent="game" instance=ExtResource( 2 )]
position = Vector2( 203, 565 )

[node name="floor" parent="game" instance=ExtResource( 3 )]
position = Vector2( 250, 613 )
scale = Vector2( 3.24, 0.796124 )

[node name="CollectTimer" type="Timer" parent="game"]
unique_name_in_owner = true
autostart = true

[node name="EnemyTimer" type="Timer" parent="game"]
unique_name_in_owner = true
wait_time = 1.2
autostart = true

[node name="colors" type="Node2D" parent="game"]
unique_name_in_owner = true

[node name="floor2" parent="game" instance=ExtResource( 3 )]
position = Vector2( 413, 307 )
rotation = 1.56671
scale = Vector2( 4.64161, 1 )

[node name="floor3" parent="game" instance=ExtResource( 3 )]
position = Vector2( -17, 303 )
rotation = 1.56671
scale = Vector2( 4.44177, 1 )

[node name="red_button" parent="game" instance=ExtResource( 4 )]
position = Vector2( 44, 668 )

[node name="blue_button" parent="game" instance=ExtResource( 5 )]
position = Vector2( 202, 671 )

[node name="green_button" parent="game" instance=ExtResource( 7 )]
position = Vector2( 360, 674 )

[node name="UI" parent="game" instance=ExtResource( 8 )]

[node name="game_sound" type="AudioStreamPlayer" parent="game"]
unique_name_in_owner = true
stream = ExtResource( 11 )
volume_db = 4.0
autoplay = true

[node name="pressed" type="AudioStreamPlayer" parent="game"]
unique_name_in_owner = true
stream = ExtResource( 12 )

[node name="power_up_timer" type="Timer" parent="game"]
unique_name_in_owner = true
wait_time = 30.0
autostart = true

[node name="win_scene" parent="." instance=ExtResource( 13 )]
visible = false

[connection signal="timeout" from="game/CollectTimer" to="." method="_on_CollectTimer_timeout"]
[connection signal="timeout" from="game/EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="game/power_up_timer" to="." method="_on_power_up_timer_timeout"]
